# FlatZincToSATConverter

./: .gitignore  CMakeLists.txt  README.md  example_opt.fzn  formula.cnf  input.fzn  model.out
includes/: Encoder.hpp  Parser.hpp  Tokenizer.hpp  encoder.hpp  parser.hpp
parser_gen/: lexer.lpp  parser.ypp
proofs/: proof.smt2
scripts/: glucose-wrapper  optimizer
src/: Encoder.cpp  Parser.cpp  Tokenizer.cpp  encoder.cpp  lexer.cpp  main.cpp  parser.cpp
